# databricks-mcp

./: .env.example  .gitignore  MISSING_FEATURES.md  README.md  STREAMING_SUPPORT.md  WORKSPACE_API_COVERAGE.md  config.example.json  pyproject.toml  smithery.yaml
ANALYSIS/: INDEX.md  VISUAL_REFERENCE.txt  detailed_technical_reference.md
docs/: README.md  api-reference.md  authentication.md  codebase_analysis.md  configuration.md  error-handling.md  examples.md  executive_summary.txt  installation-guides.md
src/databricks_mcp/: __init__.py  server.py
src/databricks_mcp/handlers/: __init__.py  account.py  feature_store.py  jobs.py  pipelines.py  repos.py  secrets.py  serving.py  sql.py  warehouses.py  workspace.py
src/databricks_mcp/handlers/account/: __init__.py  billing.py  iam.py  oauth.py  provisioning.py  settings.py  unity_catalog.py
src/databricks_mcp/handlers/workspace/: __init__.py
src/databricks_mcp/handlers/workspace/admin/: __init__.py  iam.py  oauth2.py  settings.py
src/databricks_mcp/handlers/workspace/agents/: __init__.py  agentbricks.py
src/databricks_mcp/handlers/workspace/apps/: __init__.py  apps.py
src/databricks_mcp/handlers/workspace/cleanrooms/: __init__.py  cleanrooms.py
src/databricks_mcp/handlers/workspace/compute/: __init__.py  clusters.py  instance_pools.py  policies.py
src/databricks_mcp/handlers/workspace/dashboards/: __init__.py  dashboards.py
src/databricks_mcp/handlers/workspace/data/: __init__.py  dbfs.py  unity_catalog.py
src/databricks_mcp/handlers/workspace/governance/: __init__.py  dataquality.py  tags.py
(+13 files in other folders)
