[project]
name = "databricks-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Databricks REST API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "databricks-sdk>=0.30.0",
    "databricks-feature-engineering>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["databricks_mcp"]
package-dir = {"" = "src"}

[project.scripts]
databricks-mcp = "databricks_mcp.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
